force-app/main/default/objects/redwing__Training_Plan_Instructor__c/redwing__Training_Plan_Instructor__c.object-meta.xml
<CustomObject>
    <label>Learning Plan Instructor</label>
    <nameField>
        <displayFormat>LPI-{0000000}</displayFormat>
        <label>Learning Plan Instructor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Plan Instructors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>