force-app/main/default/objects/redwing__Training_Plan_Instructor__c/fields/redwing__Instructor__c.field-meta.xml
<CustomField>
    <fullName>redwing__Instructor__c</fullName>
    <label>Instructor</label>
    <referenceTo>redwing__Instructor__c</referenceTo>
    <relationshipLabel>Learning Plan Instructors</relationshipLabel>
    <relationshipName>Training_Plan_Instructors</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>