force-app/main/default/objects/redwing__Training_Plan_Instructor__c/fields/redwing__Instructor_Name__c.field-meta.xml
<CustomField>
    <fullName>redwing__Instructor_Name__c</fullName>
    <formula>redwing__Instructor__r.redwing__User__r.FirstName&amp;&quot; &quot;&amp;redwing__Instructor__r.redwing__User__r.LastName</formula>
    <label>Instructor Name</label>
    <type>Text</type>
</CustomField>